[package]
name = "stereo-matching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
show-image = "0.14.0"
rayon = "1.10.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 0
